# rec

./: .mergify.yml  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  README.md  lint.cmd  test.cmd
.github/workflows/: approve.yml  check.yml  merge.yml  pr.yml  rust_check.yml  rust_pr.yml
src/: atom.rs  base.rs  char.rs  lib.rs  prelude.rs  repetition.rs
tests/: alternation.rs  anchors.rs  calls.rs  class.rs  classes.rs  concatenation.rs  expression.rs  limits.rs  literals.rs  path.rs  range.rs  readme.rs  repetitions.rs  root.rs  version-numbers.rs
