[package]
name = "rec"
version = "0.10.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
description = "Regular Expression Constructor"
license = "MIT"
repository = "https://github.com/jsim2010/rec"
readme = "README.md"
keywords = ["regular", "expression", "constructor"]
categories = ["text-processing", "rust-patterns"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.0"

[dev-dependencies]
version-sync = "0.8"
