[package]
name = "rec"
version = "0.11.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
description = "Regular Expression Constructor"
license = "MIT"
repository = "https://github.com/jsim2010/rec"
readme = "README.md"
keywords = ["regular", "expression", "constructor"]
categories = ["text-processing", "no-std"]
edition = "2018"

[lib]
proc-macro = true
# Required to make cargo-readme work; see
# https://github.com/livioribeiro/cargo-readme/issues/32.
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.0"
quote = "0.6.13"
regex-syntax = "0.6.8"

[dependencies.syn]
version = "0.15.42"
features = ["extra-traits"]

[dev-dependencies]
# Used in examples.
regex = "1.1.0"
version-sync = "0.8"
